...
            label = { Text("Kanaloj") }
        )
        NavigationBarItem(
            selected = nunaTab == EkranoLangeto.PLEJŜATATAJ,
            onClick = { logi("Klako", "plejŝatataj-tab"); onPlejŝatataj() },
            icon = { Icon(Icons.Filled.Favorite, contentDescription = null) },
            label = { Text("Plej ŝatataj") }
        )
        NavigationBarItem(
            selected = nunaTab == EkranoLangeto.SERCXO,
            onClick = { logi("Klako", "sercxo-tab"); onSercxo() },
            icon = { Icon(Icons.Filled.Search, contentDescription = null) },
            label = { Text("Serĉi") }
...
